removing template and creating the api specification
